# docs/swagger.json
@@ -13,21 +13,21 @@
     "paths": {
         "/books": {
             "get": {
-                "description": "Retrieves details of all books including title, author, published year, ISBN, and available copies.",
+                "description": "Jokes to brighten your day :D.",
                 "produces": [
                     "application/json"
                 ],
                 "tags": [
-                    "Books"
+                    "Welcome"
                 ],
-                "summary": "Get All Books",
+                "summary": "Papa's Joke",
                 "responses": {
                     "200": {
                         "description": "OK",
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/models.BookDto"
+                                "$ref": "#/definitions/models.JokeDto"
                             }
                         }
                     },
@@ -235,10 +235,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "type": "object",
-                            "additionalProperties": {
-                                "type": "string"
-                            }
+                            "$ref": "#/definitions/models.ErrorResponse"
                         }
                     },
                     "400": {
@@ -485,6 +482,14 @@
                     "type": "string"
                 },
                 "status": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.JokeDto": {
+            "type": "object",
+            "properties": {
+                "joke": {
                     "type": "string"
                 }
             }
